Fix overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,7 @@
 
 @layer base {
   html {
+    overflow: hidden;
     background-color: theme('colors.zinc.50');
   }
 
